Fix horizontal scrolling

--- a/src/css/background_img.css
+++ b/src/css/background_img.css
@@ -1,7 +1,11 @@
+.page {
+    margin:0;
+    width:'100%';
+}
 .selfie {
     background-image: url(../images/touxiang3.jpg);
     background-attachment: fixed;
-    widows: 100%;
+    width: 100vw;
     height: 100vh;
     background-size: cover;
     background-position: center;
